2010-03-26  Qi Zhang  <qi.2.zhang@nokia.com>

Reviewed by Laszlo Gombos.

        [Qt] fast/canvas/drawImage-with-negative-source-destination.html failed
        https://bugs.webkit.org/show_bug.cgi?id=35005

        Enable fast/canvas/drawImage-with-negative-source-destination.html

        * platform/qt/Skipped:
2010-03-26  Qi Zhang  <qi.2.zhang@nokia.com>

        Reviewed by Laszlo Gombos.

        [Qt] fast/canvas/drawImage-with-negative-source-destination.html failed
        https://bugs.webkit.org/show_bug.cgi?id=35005

        To support negative width or height at context.drawImage

        * platform/graphics/qt/StillImageQt.cpp:
        (WebCore::StillImage::draw):

Canonical link: https://commits.webkit.org/47913@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56619 268f45cc-cd09-0410-ab3c-d52691b4dbfc